--- a/website/styles/simulation.css
+++ b/website/styles/simulation.css
@@ -1,23 +1,29 @@
 #simulation {
-    min-height: 0;
+  min-height: 0;
+  display: flex;
+  height: 100%;
+  width: 100%;
+
+  > div {
+    flex: 1;
+    /* min-height: 0; */
+    overflow-y: auto;
     display: flex;
-    height: 100%;
-    width: 100%;
+    flex-direction: column;
+    width: 32rem;
+    gap: 1rem;
 
     > div {
-        flex: 1;
-        /* min-height: 0; */
-        overflow-y: auto;
-        display: flex;
-        flex-direction: column;
-        width: 32rem;
-        gap: 1rem;
+      display: flex;
+      flex-direction: column;
 
-        > div {
-            display: flex;
-            flex-direction: column;
-
-            gap: 0.5rem;
-        }
+      gap: 0.5rem;
     }
+  }
+
+  div:has(> input[type="date"] + button) {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+  }
 }
