--- a/websites/kibo.money/styles/table.css
+++ b/websites/kibo.money/styles/table.css
@@ -1,4 +1,4 @@
-#database {
+#table {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -37,6 +37,10 @@
       border-color: var(--off-color);
       border-style: dashed !important;
       padding: 0.25rem 1rem;
+    }
+
+    td {
+      text-transform: lowercase;
     }
 
     th:first-child {
