websites: default: up deps + fix css

--- a/websites/default/styles/chart.css
+++ b/websites/default/styles/chart.css
@@ -28,11 +28,12 @@
     flex: 1;
   }
 
-  .lightweight-chart {
-    z-index: 30;
+  > .chart > legend,
+  > fieldset {
+    z-index: 20;
   }
 
-  > * {
-    /* z-index: 30; */
+  .lightweight-chart {
+    z-index: 40;
   }
 }
