--- a/website/styles/fonts.css
+++ b/website/styles/fonts.css
@@ -1,29 +1,14 @@
 @font-face {
-  font-family: "Geist Mono";
-  src: url("/assets/fonts/GeistMono[wght]-v1_5.woff2") format("woff2");
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: block;
-}
-@font-face {
-  font-family: "Geist Mono";
-  src: url("/assets/fonts/GeistMono-Italic[wght]-v1_5.woff2") format("woff2");
-  font-style: italic;
-  font-weight: 100 900;
-  font-display: block;
-}
-
-@font-face {
   font-family: Lilex;
-  src: url("/assets/fonts/Lilex[wght].woff2") format("woff2");
+  src: url("/assets/fonts/Lilex[wght]-v2_620.woff2") format("woff2");
   font-style: normal;
-  font-weight: 100 900;
+  font-weight: 100 700;
   font-display: block;
 }
 @font-face {
   font-family: Lilex;
-  src: url("/assets/fonts/Lilex-Italic[wght].woff2") format("woff2");
+  src: url("/assets/fonts/Lilex-Italic[wght]-v2_620.woff2") format("woff2");
   font-style: italic;
-  font-weight: 100 900;
+  font-weight: 100 700;
   font-display: block;
 }
