--- a/website/styles/components.css
+++ b/website/styles/components.css
@@ -123,7 +123,11 @@ search {
 
 .shadow-top {
   position: absolute;
-  background-image: linear-gradient(to top, transparent, var(--background-color));
+  background-image: linear-gradient(
+    to top,
+    transparent,
+    var(--background-color)
+  );
   height: var(--main-padding);
   top: 0;
   left: 0;
@@ -134,7 +138,12 @@ search {
 
 .shadow-bottom {
   position: absolute;
-  background-image: linear-gradient(to bottom, transparent, var(--background-color) 90%, var(--background-color));
+  background-image: linear-gradient(
+    to bottom,
+    transparent,
+    var(--background-color) 90%,
+    var(--background-color)
+  );
   height: 21rem;
   bottom: 0;
   left: 0;
@@ -145,7 +154,11 @@ search {
 
 .shadow-left {
   position: absolute;
-  background-image: linear-gradient(to left, transparent, var(--background-color));
+  background-image: linear-gradient(
+    to left,
+    transparent,
+    var(--background-color)
+  );
   width: var(--main-padding);
   left: 0;
   top: 0;
@@ -156,7 +169,11 @@ search {
 
 .shadow-right {
   position: absolute;
-  background-image: linear-gradient(to right, transparent, var(--background-color));
+  background-image: linear-gradient(
+    to right,
+    transparent,
+    var(--background-color)
+  );
   width: var(--main-padding);
   right: 0;
   top: 0;
@@ -290,6 +307,7 @@ fieldset {
         padding-right: 0.375rem;
         margin-left: -0.375rem;
         margin-right: -0.375rem;
+        margin-top: 0.1rem;
       }
     }
   }
