--- a/website/styles/elements.css
+++ b/website/styles/elements.css
@@ -171,7 +171,6 @@ html {
   scrollbar-color: var(--off-color) var(--background-color);
   scrollbar-width: thin;
   overflow: hidden;
-  interpolate-size: allow-keywords;
 }
 
 input {
@@ -218,7 +217,6 @@ label {
       gap: 0.25rem;
 
       > span.colors {
-        margin-top: 0.15rem;
         display: flex;
         width: 0.625rem;
         height: 0.625rem;
@@ -375,6 +373,12 @@ sup {
   font-weight: 500;
 }
 
+summary > small {
+  margin-left: 0.375rem;
+  opacity: 0.5;
+  font-weight: 300;
+}
+
 small {
   color: var(--off-color);
   font-weight: var(--font-weight-base);
@@ -387,7 +391,13 @@ small {
   select + & {
     font-weight: var(--font-weight-base);
     font-size: var(--font-size-xs);
-    margin-left: -0.5rem !important;
+
+    + span {
+      color: var(--off-color);
+      font-weight: 400;
+      font-size: 1rem;
+      line-height: 1;
+    }
   }
 }
 
