--- a/website/styles/panes/chart.css
+++ b/website/styles/panes/chart.css
@@ -7,42 +7,27 @@
   padding: var(--main-padding);
   background-color: var(--background-color);
 
-  p#domain {
-    position: absolute;
-    left: 2rem;
-    top: 0.75rem;
-    color: var(--gray);
-    font-size: var(--font-size-sm);
-    line-height: var(--line-height-sm);
-  }
-
   header {
     flex-shrink: 0;
     display: flex;
     white-space: nowrap;
     overflow-x: auto;
     padding-bottom: 1rem;
-    margin-bottom: -1.5rem;
+    margin-bottom: -1.25rem;
     padding-left: var(--main-padding);
     margin-left: var(--negative-main-padding);
     padding-right: var(--main-padding);
     margin-right: var(--negative-main-padding);
+    margin-top: -0.5rem;
 
-    & > * {
-      flex: 1;
+    h1 {
+      font-size: 1.375rem;
+      letter-spacing: 0.05rem;
     }
   }
 
   .chart {
     flex: 1;
-  }
-
-  > .chart > legend,
-  > fieldset {
-    z-index: 20;
-  }
-
-  .lightweight-chart {
-    z-index: 40;
+    margin-bottom: -0.25rem;
   }
 }
