--- a/website/styles/variables.css
+++ b/website/styles/variables.css
@@ -2,11 +2,13 @@
   color-scheme: light dark;
 
   /*--white: oklch(90% 0 0);*/
-  --white: oklch(95% 0.01 44);
-  --light-gray: oklch(90% 0.01 44);
+  --white: oklch(93.3% 0.006 75);
+  /*oklch(0.9333 0.0059 59.65)*/
+  --light-gray: oklch(85% 0.01 75);
   --gray: oklch(60% 0.01 44);
   --dark-gray: oklch(30% 0.01 44);
-  --black: oklch(16% 0.005 44);
+  --black: oklch(16.5% 0.006 90);
+  /*oklch(0.2038 0.0076 196.57)*/
   --red: oklch(0.607 0.241 26.328);
   --orange: oklch(67.64% 0.191 44.41);
   --amber: oklch(0.7175 0.1835 64.199);
