--- a/website/styles/components.css
+++ b/website/styles/components.css
@@ -417,19 +417,33 @@ fieldset {
       }
     }
 
-    .scale-selector {
+    td:last-child > .field {
       position: absolute;
       bottom: 0;
       left: 0;
       right: 0;
       z-index: 10;
       display: flex;
-      flex-direction: column;
-      pointer-events: none;
+      font-size: var(--font-size-xs);
+      gap: 0.25rem;
+      background-color: var(--background-color);
+      align-items: center;
+      text-transform: uppercase;
+      padding-left: 0.625rem;
+      padding-top: 0.125rem;
+      padding-bottom: 0.25rem;
+
+      label {
+        margin: -0.25rem;
+        padding: 0.25rem;
+      }
 
       &::before {
         content: "";
-        width: 100%;
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        right: 0;
         height: 2rem;
         background-image: linear-gradient(
           to bottom,
@@ -437,37 +451,9 @@ fieldset {
           var(--background-color)
         );
       }
-
-      > div:has(label) {
-        display: flex;
-        font-size: var(--font-size-xs);
-        gap: 0.25rem;
-        background-color: var(--background-color);
-        align-content: center;
-        align-items: center;
-        text-transform: uppercase;
-        padding-left: 0.625rem;
-        padding-top: 0.125rem;
-        padding-bottom: 0.25rem;
-
-        label {
-          margin: -0.25rem;
-          padding: 0.25rem;
-        }
-      }
-
-      > fieldset {
-        pointer-events: auto;
-        background-color: var(--background-color);
-        width: 100%;
-        justify-content: center;
-        padding-bottom: 0.25rem;
-        font-size: var(--font-size-xs);
-        line-height: var(--line-height-xs);
-      }
     }
 
-    .index-selector {
+    table > tr:last-child > div:has(> select) {
       position: absolute;
       left: 0;
       top: 0;
@@ -479,26 +465,22 @@ fieldset {
       font-size: var(--font-size-xs);
       line-height: var(--line-height-xs);
       text-transform: uppercase;
+      background-color: var(--background-color);
+      padding-left: var(--main-padding);
+      padding-right: 0.25rem;
+      margin-top: 0.5px;
 
-      > div {
-        background-color: var(--background-color);
-        padding-left: var(--main-padding);
-        padding-right: 0.25rem;
-        height: 100%;
-        margin-top: 1px;
-        display: flex;
-        align-items: center;
-
-        > select {
-          width: auto;
-          background: none;
-        }
+      > select {
+        width: auto;
+        background: none;
       }
 
       &::after {
         content: "";
-        height: 100%;
-        margin-top: 1px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 100%;
         width: var(--main-padding);
         background-image: linear-gradient(
           to right,
@@ -512,7 +494,7 @@ fieldset {
       position: absolute;
       top: 0.5rem;
       right: 0.5rem;
-      z-index: 10;
+      z-index: 50;
       font-size: var(--font-size-xs);
       line-height: var(--line-height-xs);
       color: var(--off-color);
