--- a/website/styles/components.css
+++ b/website/styles/components.css
@@ -262,6 +262,12 @@ fieldset {
   min-height: 0;
   flex: 1;
 
+  label,
+  select {
+    margin: -0.5rem;
+    padding: 0.5rem;
+  }
+
   legend {
     position: absolute;
     top: 0;
@@ -305,13 +311,18 @@ fieldset {
     > div {
       display: flex;
       align-items: center;
-      gap: 0.75rem;
       overflow-x: auto;
       scrollbar-width: thin;
       padding: 0 var(--main-padding);
-      padding-top: 0.25rem;
+      padding-top: 0.278rem;
       padding-bottom: 0.75rem;
-      pointer-events: auto;
+      > * {
+        pointer-events: auto;
+      }
+
+      > span {
+        padding: 0 0.75rem;
+      }
 
       > div:has(> select) {
         > select {
@@ -338,9 +349,6 @@ fieldset {
         align-items: center;
 
         > label {
-          margin: -0.375rem 0;
-          color: var(--color);
-
           > span {
             display: flex !important;
           }
@@ -362,6 +370,10 @@ fieldset {
               > span.main > span.name {
                 text-decoration-color: var(--orange) !important;
               }
+            }
+
+            &:active {
+              color: var(--orange);
             }
           }
         }
@@ -389,40 +401,78 @@ fieldset {
       gap: 0.375rem;
     }
 
-    table > tr:first-child {
-      position: relative;
+    table > tr {
+      &:first-child > td:nth-child(2) {
+        position: relative;
 
-      &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        height: var(--main-padding);
-        background-image: linear-gradient(
-          to bottom,
-          var(--background-color),
-          transparent
-        );
-        z-index: 10;
-        pointer-events: none;
+        &::after {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          height: var(--main-padding);
+          background-image: linear-gradient(
+            to bottom,
+            var(--background-color),
+            transparent
+          );
+          z-index: 10;
+          pointer-events: none;
+        }
       }
-    }
 
-    table > tr:last-child {
-      position: relative;
-
-      > td {
+      &:last-child > td {
         border-top: 1px;
+
+        &:nth-child(2) {
+          position: relative;
+
+          > .field {
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            z-index: 10;
+            display: flex;
+            align-items: center;
+            pointer-events: auto;
+            font-size: var(--font-size-xs);
+            line-height: var(--line-height-xs);
+            text-transform: uppercase;
+            background-color: var(--background-color);
+            padding-left: var(--main-padding);
+            padding-right: 0.25rem;
+
+            > select {
+              width: auto;
+              background: none;
+            }
+
+            &::after {
+              content: "";
+              position: absolute;
+              top: 0;
+              bottom: 0;
+              left: 100%;
+              width: var(--main-padding);
+              background-image: linear-gradient(
+                to right,
+                var(--background-color),
+                transparent
+              );
+            }
+          }
+        }
       }
     }
 
     td:last-child > .field {
       position: absolute;
-      bottom: 0;
+      top: 0;
       left: 0;
       right: 0;
-      z-index: 10;
+      z-index: 50;
       display: flex;
       font-size: var(--font-size-xs);
       gap: 0.25rem;
@@ -430,62 +480,25 @@ fieldset {
       align-items: center;
       text-transform: uppercase;
       padding-left: 0.625rem;
-      padding-top: 0.125rem;
-      padding-bottom: 0.25rem;
+      padding-top: 0.35rem;
+      padding-bottom: 0.125rem;
 
       label {
         margin: -0.25rem;
         padding: 0.25rem;
       }
 
-      &::before {
-        content: "";
-        position: absolute;
-        bottom: 100%;
-        left: 0;
-        right: 0;
-        height: 2rem;
-        background-image: linear-gradient(
-          to bottom,
-          transparent,
-          var(--background-color)
-        );
-      }
-    }
-
-    table > tr:last-child > div:has(> select) {
-      position: absolute;
-      left: 0;
-      top: 0;
-      bottom: 0;
-      z-index: 10;
-      display: flex;
-      align-items: center;
-      pointer-events: auto;
-      font-size: var(--font-size-xs);
-      line-height: var(--line-height-xs);
-      text-transform: uppercase;
-      background-color: var(--background-color);
-      padding-left: var(--main-padding);
-      padding-right: 0.25rem;
-      margin-top: 0.5px;
-
-      > select {
-        width: auto;
-        background: none;
-      }
-
       &::after {
         content: "";
         position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 100%;
-        width: var(--main-padding);
+        top: 100%;
+        left: 0;
+        right: 0;
+        height: 1rem;
         background-image: linear-gradient(
-          to right,
-          var(--background-color),
-          transparent
+          to top,
+          transparent,
+          var(--background-color)
         );
       }
     }
