--- a/website/styles/fonts.css
+++ b/website/styles/fonts.css
@@ -5,10 +5,17 @@
   font-weight: 100 700;
   font-display: block;
 }
+
 @font-face {
   font-family: Lilex;
   src: url("/assets/fonts/Lilex-Italic[wght]-v2_620.woff2") format("woff2");
   font-style: italic;
   font-weight: 100 700;
   font-display: block;
+}
+
+html {
+  font-family:
+    "Lilex", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
 }
